📝 💄 ✨ Major updates to basically everything.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "name": "portfolio",
-  "private": true,
-  "version": "0.0.0",
+  "homepage": "https://github.com/GamingKlex/portfolio",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/GamingKlex/portfolio.git"
+  },
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
